[package]
name = "dryip"
version = "0.1.8"
authors = ["azzamsa <me@azzamsa.com>"]
description = "Short 🩸 Rust 🦀 code snippets for inspiration."
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["algorithms", "dryip"]
categories = ["algorithms"]
readme = "README.md"
repository = "https://github.com/azzamsa/dryip-of-rust"
documentation = "https://docs.rs/dryip"
homepage = "https://github.com/azzamsa/dryip-of-rust"

[dependencies]
thiserror = "1.0.30"
time = "0.3.5"

[dev-dependencies]
proptest = "1.0.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[package.metadata.cargo-udeps.ignore]
development = ["cargo-husky"]
