[package]
name = "dryip"
version = "0.1.8"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["algorithms"]
documentation = "https://docs.rs/dryip"
edition = "2021"
homepage = "https://github.com/azzamsa/dryip-of-rust"
keywords = ["algorithms", "dryip"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/azzamsa/dryip-of-rust"
description = "Short 🩸 Rust 🦀 code snippets for inspiration."

[dependencies]
time = "0.3.14"

[dev-dependencies]
# git hooks
cargo-husky = { version = "1", features = ["user-hooks"] }

[package.metadata.cargo-udeps.ignore]
development = ["cargo-husky"]
