[package]
name = "dryip"
version = "0.6.0"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["algorithms"]
documentation = "https://docs.rs/dryip"
edition = "2021"
homepage = "https://github.com/azzamsa/dryip-of-rust"
keywords = ["algorithms", "dryip"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/azzamsa/dryip-of-rust"
rust-version = "1.81.0"
description = "Short 🩸 Rust 🦀 code snippets for inspiration."

[dependencies]
itertools = "0.10.5"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
